# lvi_cil

./: CMakeLists.txt  package.xml  params_lidar.yaml
launch/: run.launch.py
src/lidar_odometry/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptimization.cpp  utility.h
src/visual_odometry/visual_estimator/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/visual_odometry/visual_estimator/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  projection_td_factor.h
src/visual_odometry/visual_estimator/initial/: initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_5pts.cpp  solve_5pts.h
src/visual_odometry/visual_estimator/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  package_getPath.cpp  package_getPath.h  visualization.cpp  visualization.h
